--- a/app.css
+++ b/app.css
@@ -89,32 +89,38 @@ body {
 #search-bar{
     width:50%;
     border-radius:8px;
-    border-width: 1px;
-    border-color: var(--s200);
+    outline: 1px var(--s200) solid;
     background-color: var(--grey-200);
     color:var(--grey-100);
     font: var(--inter-13-medium);
     margin:.2rem 0 .2rem 0;
 }
+#search-bar:hover{
+    outline: 1px white solid;
+}
 #search-bar > form{
     width: 100%;
     height: 100%;
-    padding: 0;
+    padding: 0 0 0 10px;
     display: flex;
     flex-direction: row;
     gap:5px;
+    align-items: center;
+
 }
 #search-bar > form > svg{
-    margin: auto  0 auto auto;
+    /* margin: auto  0 auto auto; */
     width: 2rem;
+    height: 2rem;
     fill: var(--grey-100);
 }
 #search-bar > form >svg >path{
     fill: var(--grey-100);
 }
 #search-field{
-    height:100%;
-    width: 92%;
+    height:1.8rem;
+    width: fit-content;
+    max-width: 90%;
     margin:0;
     border:none;
     border-radius:8px;
@@ -125,6 +131,7 @@ body {
 
 #search-field:focus-visible{
     outline: none;
+    color: white;
 }
 
 #notification{
